--- a/yolo/yolo_env/src/Dockerfile
+++ b/yolo/yolo_env/src/Dockerfile
@@ -1,10 +1,9 @@
-FROM python:3.11.5-alpine
-
+FROM python:3.11.5-slim
 WORKDIR /app
 
-COPY requirements.txt .
+# Install Python dependencies
+COPY . .
 RUN pip install -r requirements.txt
 
-COPY . .
 EXPOSE 8000
 CMD ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
